# uefi-app

./: Cargo.toml  OVMF_VARS-1024x768.fd  README.md  build.py
.cargo/: config
src/: main.rs
