[package]
name = "uefi-app"
version = "0.1.0"
authors = ["ymgyt <yamaguchi7073xtt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = "*"
uefi-services = "*"
rlibc = "1.0.0"
log = {version = "0.4.11", default-features = false}

